# ev-check

./: &1  .env.example  .gitignore  DESIGN_UPDATE.md  README.md  add_auth_method_column.py  check_build_tasks.py  check_login.html  clean_orphaned_targets.py  complete_fix.js  debug_dashboard.html  debug_user.html  dev  diagnose.js  diagnose_snapshot_data.py  docker-compose.yml  dump_comms_temp.py  emergency_fix.html  emergency_fix.js  emergency_fix_v2.js  final_complete_fix.html  final_fix.html  final_test.html  final_test.sh  final_test_v6.html  final_verification.sh  fix_login.html  fix_user_display.js  implementation_report.md  nohup.out  package-lock.json  package.json  progress.md  pyproject.toml  quick_fix.js  requirements.txt  restart.sh  restart_backend.sh  resubmit_tasks.py  scratch.py  (+21 more)
.claude/: settings.json  settings.local.json
.gemini/: rules.md
.trae/rules/: coding.md  performance.md  preference.md  readable-code.md  rebuild.md
app/: celery_config.py  config.py  database.py  main.py
app/api/: check_items.py  check_rules.py  checks.py  communications.py  (+5 more)
docs/: API使用指南.md  README.md  修复说明.md  全面测试方案.md  开发文档.md  开发进度报告-20260304.md  开发进度跟踪.md  快速部署指南.md  最终测试报告.md  测试执行报告-单元测试.md  深交所设计系统.md  综合测试报告.md  需求落实检查报告.md  项目完成情况评估报告.md
scratch/: add_indexes.py  check_reports.py  inspect_report.py  inspect_rules.py  inspect_tasks.py  migration_v2.py  test_db_sync.py
scripts/: alter_db_report.py  alter_db_sqlalchemy.py  migrate_sqlite_to_mysql.py
tests/: conftest.py  test_executor_recursive.py  test_integration_recursive.py  test_ssh_recursive.py
(+116 files in other folders)
